[gd_scene load_steps=3 format=3 uid="uid://dpbo0uinvw3t8"]

[ext_resource type="Script" path="res://Scripts/Missile.gd" id="1_qdkjl"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_e40q3"]
radius = 30.0
height = 120.0

[node name="Missile" type="RigidBody2D"]
collision_layer = 8
collision_mask = 12
gravity_scale = 0.0
max_contacts_reported = 1
contact_monitor = true
script = ExtResource("1_qdkjl")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_e40q3")

[node name="ExplosionTimer" type="Timer" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="ExplosionTimer" to="." method="_on_explosion_timer_timeout"]
